Add script for building a container

--- a/builder/cfn/ec2-builder-vm-template.yml
+++ b/builder/cfn/ec2-builder-vm-template.yml
@@ -63,7 +63,18 @@ Resources:
           Ebs:
             VolumeSize: !Ref RootVolumeSize
             VolumeType: !Ref RootVolumeType
-
+      UserData:
+        Fn::Base64: 
+          !Sub |
+            #!/bin/bash
+            yum update -y
+            yum install -y yum-utils
+            yum install -y git
+            yum-config-manager \
+              --add-repo \
+              https://download.docker.com/linux/centos/docker-ce.repo
+            yum install -y docker-ce docker-ce-cli containerd.io docker-compose-plugin
+            usermod -aG docker centos
   InstanceIamRole:
     Type: AWS::IAM::Role
     Properties:
